syntax = "proto3";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc GoodBye (GoodByeRequest) returns (GoodByeReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message GoodByeRequest {
  string name = 1;
  string message = 2;
}

message GoodByeReply {
  bool result = 1;
  string name = 2;
  string message = 3;
}


